# SimpleClientServer

./: CMakeLists.txt  LICENSE
client/: CMakeLists.txt  main.cpp
client/util/: byte.cpp  byte.h  client.cpp  client.h  diffie.cpp  diffie.h  hmac.cpp  md5.h  util.cpp  util.h
server/: CMakeLists.txt  main.cpp
server/console/: console.cpp  console.h
server/util/: byte.cpp  diffie.cpp  handler.cpp  handler.h  hmac.h  md5.cpp  server.cpp  server.h  util.cpp  util.h
